package com.myvanitys.api.product.domain.port.secondary;

import java.util.List;
import java.util.Optional;
import java.util.UUID;

import com.myvanitys.api.product.domain.model.ProductUserRelation;
import com.myvanitys.api.common.valueobject.EntityId;

public interface ProductUserRepository {

  /**
   * Save a relationship between a product and a user
   *
   * @param productId the product ID
   * @param userId the user ID
   */
  void saveProductUserRelationship(EntityId productId, EntityId userId);

  /**
   * Check if a user is associated with a product
   *
   * @param productId the product ID
   * @param userId the user ID
   * @return true if the user is associated with the product
   */
  boolean isUserAssociatedWithProduct(EntityId productId, EntityId userId);

  /**
   * Delete all relationships for a product
   *
   * @param productId the product ID
   */
  void deleteByProductId(EntityId productId);

  /**
   * Check if a product is associated with a user
   *
   * @param productId the product ID
   * @param userId the user ID
   * @return true if the product is associated with the user
   */
  boolean existsByProductIdAndUserId(EntityId productId, EntityId userId);

  /**
   * Find all product-user relationships for a user
   *
   * @param userId the user ID
   * @return list of relationship objects containing product IDs
   */
  List<EntityId> findProductIdsByUserId(EntityId userId);

  /**
   * Find product-user relationships by product ID
   *
   * @param productId the product ID
   * @return list of product-user relationships
   */
  List<ProductUserRelation> findByProductId(UUID productId);

  /**
   * Find product-user relationships by user ID
   *
   * @param userId the user ID
   * @return list of product-user relationships
   */
  List<ProductUserRelation> findByUserId(UUID userId);

  /**
   * Find a specific relationship between a product and a user
   *
   * @param productId the product ID
   * @param userId the user ID
   * @return the product-user relationship if found
   */
  Optional<ProductUserRelation> findByProductIdAndUserId(UUID productId, UUID userId);

  /**
   * Delete a specific relationship between a product and a user
   *
   * @param productId the product ID
   * @param userId the user ID
   */
  void deleteByProductIdAndUserId(UUID productId, UUID userId);
}