classDiagram
    %% Product domain: aggregate, value objects, domain service, and secondary ports.

    class Product {
        <<aggregateRoot>>
        -id: EntityId
        -name: String
        -brand: String
        -category: Category
        -colorHex: String
        -averageRating: int
        -reviews: List~Review~
        -userRelations: Set~ProductUserRelation~
        +create(name, brand, category, colorHex) Product
        +newProduct(name, brand, colorHex) Product
        +reconstruct(id, name, brand, category, colorHex, reviews, userRelations) Product
        +assignCategory(category: Category) void
        +updateDetails(name, brand, category, colorHex) void
        +addReviewFromUser(userId: EntityId, details: ReviewDetails) Review
        +updateReview(reviewId: EntityId, rating: int, comment: String) Review
        +deleteReview(reviewId: EntityId) Review
        +removeReview(reviewId: EntityId) boolean
        +hasReviewFrom(userId: EntityId) boolean
        +findReviewsByUser(userId: EntityId) List~Review~
        +findActiveReviewsByUser(userId: EntityId) List~Review~
        +findReviewById(reviewId: EntityId) Optional~Review~
        +getReviews() List~Review~
        +getUserRelations() Set~ProductUserRelation~
    }

    class Category {
        <<record>>
        -categoryId: EntityId
        -name: String
    }

    class Review {
        -id: EntityId
        -productUserId: EntityId
        -details: ReviewDetails
        +createWithExistingId(id, productUserId, details) Review
        +updateDetails(rating: int, comment: String) void
        +markAsDeleted() void
        +isDeleted() boolean
        +isActive() boolean
        +getRating() int
        +getComment() String
    }

    class ProductUserRelation {
        -id: EntityId
        -productId: EntityId
        -userId: EntityId
        +create(productId: EntityId, userId: EntityId) ProductUserRelation
        +reconstruct(id, productId, userId) ProductUserRelation
    }

    class EntityId {
        <<sharedKernel>>
        -value: UUID
        +newId() EntityId
        +of(uuid: UUID) EntityId
        +getValue() UUID
    }

    class ReviewDetails {
        <<record>>
        -rating: int
        -comment: String
        -createdAt: Timestamp
        -updatedAt: Timestamp
        -deletedAt: Timestamp
        +create(rating: int, comment: String) ReviewDetails
        +of(rating, comment, createdAt, updatedAt, deletedAt) ReviewDetails
        +withUpdates(rating: int, comment: String) ReviewDetails
        +markAsDeleted() ReviewDetails
        +isDeleted() boolean
    }

    class Timestamp {
        <<record>>
        -value: Instant
        +now() Timestamp
        +of(instant: Instant) Timestamp
        +asInstant() Instant
        +isBefore(other: Timestamp) boolean
        +isAfter(other: Timestamp) boolean
    }

    class ProductReview {
        <<domainService>>
        +calculateOverallAverageRating(products: List~Product~) double
        +findUserIdForReview(product: Product, reviewId: EntityId) EntityId
        +getUserReviewsAcrossProducts(products, userId) List~Review~
        +getUserActiveReviewsAcrossProducts(products, userId) List~Review~
        +calculateUserAverageRating(products, userId) double
        +getProductStats(product: Product) ProductReviewStats
    }
    class ProductReviewStats {
        -totalReviews: int
        -exactAverageRating: double
        -roundedAverageRating: int
    }

    class ProductRepository {
        <<secondaryPort>>
        +save(product: Product) Product
        +findById(productId: EntityId) Optional~Product~
        +findByName(productName: String, entityId: EntityId) Optional~Product~
        +deleteById(productId: EntityId) void
        +findByUserId(userId: UUID) List~Product~
        +findAll() List~Product~
        +findAllProductDetailsByUserId(userId: UUID) List~Product~
        +searchProductDetailsByNameOrBrand(term: String) List~Product~
    }

    class CategoryRepository {
        <<secondaryPort>>
        +findById(categoryId: EntityId) Optional~Category~
        +findByName(name: String) Optional~Category~
        +findAll() List~Category~
        +save(category: Category) Category
        +deleteById(categoryId: EntityId) void
    }

    class ReviewRepository {
        <<secondaryPort>>
        +save(review: Review) Review
        +findById(reviewId: EntityId) Optional~Review~
        +deleteById(reviewId: EntityId) void
        +findByProductId(productId: EntityId) List~Review~
        +findByUserId(userId: EntityId) List~Review~
        +findByProductUserId(productUserId: EntityId) List~Review~
        +existsByReviewIdAndUserId(reviewId: EntityId, userId: EntityId) boolean
    }

    class ProductUserRepository {
        <<secondaryPort>>
        +saveProductUserRelationship(productId: EntityId, userId: EntityId) void
        +isUserAssociatedWithProduct(productId: EntityId, userId: EntityId) boolean
        +deleteByProductId(productId: EntityId) void
        +existsByProductIdAndUserId(productId: EntityId, userId: EntityId) boolean
        +findProductIdsByUserId(userId: EntityId) List~EntityId~
        +findByProductId(productId: UUID) List~ProductUserRelation~
        +findByUserId(userId: UUID) List~ProductUserRelation~
        +findByProductIdAndUserId(productId: UUID, userId: UUID) Optional~ProductUserRelation~
        +deleteByProductIdAndUserId(productId: UUID, userId: UUID) void
    }

    Product "1" *-- "0..*" Review : reviews
    Product "1" *-- "1" Category : category
    Product "1" *-- "0..*" ProductUserRelation : userRelations
    Review "1" *-- "1" ReviewDetails : details
    ReviewDetails "1" *-- "0..3" Timestamp : timestamps
    Product "1" *-- "1" EntityId : id
    Category "1" *-- "1" EntityId : categoryId
    Review "1" *-- "1" EntityId : id
    ProductUserRelation "1" *-- "2" EntityId : ids

    ProductReview ..> Product : operates on
    ProductReview ..> Review : operates on
    ProductReview ..> ProductReviewStats : produces

    %% EntityId is the shared kernel at com.myvanitys.api.common.valueobject.EntityId (not product.domain).
